--- a/client/src/features/member-detailed/member-detailed.html
+++ b/client/src/features/member-detailed/member-detailed.html
@@ -29,7 +29,7 @@
             <div class="flex justify-between items-center">
                 <h3 class="card title text-3xl text-primary">{{title()}}</h3>
                 @if(isCurrentUser()){
-                    <button (click)="memberService.editMode.set(!memberService.editMode())" class="btn btn-outline btn-primary">{{memberService.editMode() ? "Save" : "Edit"}}</button>
+                    <button (click)="memberService.editMode.set(!memberService.editMode())" class="btn btn-outline btn-primary">{{memberService.editMode() ? "Cancel" : "Edit"}}</button>
                 }
             </div>
             <div class="divider"></div>
