End of Section 14

--- a/client/src/features/member-list/member-list.html
+++ b/client/src/features/member-list/member-list.html
@@ -26,4 +26,4 @@
 }
 
 <app-filter-modal #filterModal [hidden]="!paginatedMembers()" (closeModal)="closeFilterModal()"
-    (submitData)="onFilterChange($event)"></app-filter-modal>
+    (submitData)="onFilterChange($event)" [memberParams]="memberParams"></app-filter-modal>
