--- a/client/src/features/member-detailed/member-detailed.html
+++ b/client/src/features/member-detailed/member-detailed.html
@@ -25,7 +25,7 @@
                 <button class="btn btn-primary flex-1">Like user</button>
             </div>
         </div>
-        <div class="card w-3/4 bg-base-100 p-6">
+        <div class="card w-3/4 bg-base-100 p-6 flex flex-col h-[85vh]">
             <div class="flex justify-between items-center">
                 <h3 class="card title text-3xl text-primary">{{title()}}</h3>
                 @if(isCurrentUser()){
@@ -33,7 +33,7 @@
                 }
             </div>
             <div class="divider"></div>
-            <div>
+            <div class="h-full">
                 <router-outlet></router-outlet>
             </div>
         </div>
