--- a/client/src/features/member-detailed/member-detailed.html
+++ b/client/src/features/member-detailed/member-detailed.html
@@ -25,7 +25,10 @@
             </div>
             <div class="card-actions justify-between gap-2 px-2 mb-3">
                 <button (click)="back()" class="btn btn-info flex-1">Go back</button>
-                <button class="btn btn-primary flex-1">Like user</button>
+                <button (click)="likesService.toggleLike(member.id)"
+                [class.btn-error]="hasLiked()"
+                [class.btn-success]="!hasLiked()"
+                 class="btn flex-1">{{hasLiked() ? 'Remove like' : 'Like user'}}</button>
             </div>
         </div>
         <div class="card w-3/4 bg-base-100 p-6 flex flex-col h-[85vh]">
